--- a/FundamentosBlazor.csproj
+++ b/FundamentosBlazor.csproj
@@ -8,4 +8,10 @@
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+  <ItemGroup>
+    <None Remove="Pages\Demos\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pages\Demos\" />
+  </ItemGroup>
 </Project>
